Basic header made

--- a/index.html
+++ b/index.html
@@ -18,5 +18,19 @@
     ></script>
     <link rel="stylesheet" href="css/global.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="header">
+      <nav class="navbar navbar-light header-navbar">
+        <div class="container">
+          <a class="nav-link" href="pages/menu.html">Menu</a>
+
+          <a class="navbar-brand" href="index.html">ROTOR</a>
+
+          <a class="nav-link" href="pages/contact.html">Contact</a>
+        </div>
+      </nav>
+    </div>
+    <div class="main"></div>
+    <div class="footer"></div>
+  </body>
 </html>
