Carousel established, slogan started

--- a/index.html
+++ b/index.html
@@ -4,33 +4,116 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
       crossorigin="anonymous"
     />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-      crossorigin="anonymous"
-    ></script>
+
     <link rel="stylesheet" href="css/global.css" />
+    <link rel="stylesheet" href="css/index.css" />
+    <title>Document</title>
   </head>
   <body>
     <div class="header">
       <nav class="navbar navbar-light header-navbar">
         <div class="container">
-          <a class="nav-link" href="pages/menu.html">Menu</a>
+          <a class="nav-link header-link" href="pages/menu.html">MENU</a>
 
-          <a class="navbar-brand" href="index.html">ROTOR</a>
+          <a class="navbar-brand align-middle logo-text" href="index.html"
+            >R
+            <img src="img/spinning-cog.gif" alt="" class="spinning-cog" />
+            T
+            <img src="img/spinning-cog.gif" alt="" class="spinning-cog" />
+            R</a
+          >
 
-          <a class="nav-link" href="pages/contact.html">Contact</a>
+          <a class="nav-link header-link" href="pages/contact.html">CONTACT</a>
         </div>
       </nav>
     </div>
-    <div class="main"></div>
-    <div class="footer"></div>
+    <div class="main">
+      <div
+        id="carouselExampleControls"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="img/banner1.jpg"
+              class="d-block w-100 banner"
+              alt="banner1"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="img/banner2.jpg"
+              class="d-block w-100 banner"
+              alt="banner2"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="img/banner3.jpg"
+              class="d-block w-100 banner"
+              alt="banner3"
+            />
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleControls"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleControls"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <div class="container text-center">
+        <div class="slogan">EAT UNTIL YOU'RE FULL(CRUM)</div>
+
+        <p class="slogan-text">
+          At ROTOR we prioritize 'functional eating', a term coined by our
+          visionary CEO and head chef, Ral Zarek.
+        </p>
+        <p>
+          Only the finest, dinest, refined-est cuisine for our guests, the ethos
+          of functional eating is (write something long and overly complex here)
+          Lorem ipsum dolor, sit amet consectetur adipisicing.
+        </p>
+        <p>
+          (Write something here about how we wouldn't have it any other way bla
+          bla bla Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Amet, quod? )
+        </p>
+
+        <img src="img/signature.png" alt="" height="25%" width="25%" />
+      </div>
+      <div class="container">Menu promo container</div>
+      <div class="container">Promo menu items</div>
+    </div>
+    <div class="footer">
+      <div class="container inner-footer">
+        <hr />
+        <!--hr with something engineer themed-->
+      </div>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
