--- a/index.html
+++ b/index.html
@@ -101,8 +101,29 @@
 
         <img src="img/signature.png" alt="" height="25%" width="25%" />
       </div>
-      <div class="container">Menu promo container</div>
-      <div class="container">Promo menu items</div>
+
+      <div
+        class="container-fluid m-0 p-0 menu-promo d-flex justify-content-center"
+      >
+        <div class="menu-promo-text d-grid">
+          <div class="actual-promo-text align-items-center d-flex">
+            <div class="d-block">
+              <p class="text-center">SKIP THE TRAIN OF THOUGHT</p>
+              <p class="text-center">CHECK OUT OUR DISHES</p>
+            </div>
+          </div>
+          <button type="button" class="btn btn-outline-warning">
+            Meet our menu
+          </button>
+        </div>
+      </div>
+      <div class="container m-0 p-0">
+        <img src="img/banner1.jpg" class="img-fluid" alt="..." />
+        <img src="img/banner2.jpg" class="img-fluid" alt="..." />
+        <img src="img/banner1.jpg" class="img-fluid" alt="..." />
+        <img src="img/banner2.jpg" class="img-fluid" alt="..." />
+        <img src="img/banner2.jpg" class="img-fluid" alt="..." />
+      </div>
     </div>
     <div class="footer">
       <div class="container inner-footer">
