--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       </div>
 
       <div
-        class="container-fluid m-0 p-0 menu-promo d-flex justify-content-center"
+        class="container-fluid m-0 p-0 menu-promo d-flex justify-content-center text-center"
       >
         <div class="menu-promo-text d-grid">
           <div class="actual-promo-text align-items-center d-flex">
@@ -112,17 +112,24 @@
               <p class="text-center">CHECK OUT OUR DISHES</p>
             </div>
           </div>
-          <button type="button" class="btn btn-outline-warning">
-            Meet our menu
-          </button>
+          <div class="row">
+            <div class="col">
+              <button type="button" class="btn btn-warning btn-md">Menu</button>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="container m-0 p-0">
-        <img src="img/banner1.jpg" class="img-fluid" alt="..." />
+      <div class="container m-0 p-0 text-center">
+        <div class="row">
+          <div class="col">Column</div>
+          <div class="col">Column</div>
+          <div class="col">Column</div>
+        </div>
+        <!-- <img src="img/banner1.jpg" class="img-fluid" alt="..." />
         <img src="img/banner2.jpg" class="img-fluid" alt="..." />
         <img src="img/banner1.jpg" class="img-fluid" alt="..." />
         <img src="img/banner2.jpg" class="img-fluid" alt="..." />
-        <img src="img/banner2.jpg" class="img-fluid" alt="..." />
+        <img src="img/banner2.jpg" class="img-fluid" alt="..." /> -->
       </div>
     </div>
     <div class="footer">
