--- a/index.html
+++ b/index.html
@@ -119,17 +119,55 @@
           </div>
         </div>
       </div>
-      <div class="container m-0 p-0 text-center">
-        <div class="row">
-          <div class="col">Column</div>
-          <div class="col">Column</div>
-          <div class="col">Column</div>
+      <div class="container text-center">
+        <div class="row center-align d-flex justify-content-center text-center">
+          <div class="col p-0">
+            <img
+              src="img/banner2.jpg"
+              alt=""
+              class="img-responsive gallery-img img-fluid"
+            />
+          </div>
+          <div class="col p-0">
+            <img
+              src="img/banner2.jpg"
+              alt=""
+              class="img-responsive gallery-img img-fluid"
+            />
+          </div>
         </div>
-        <!-- <img src="img/banner1.jpg" class="img-fluid" alt="..." />
-        <img src="img/banner2.jpg" class="img-fluid" alt="..." />
-        <img src="img/banner1.jpg" class="img-fluid" alt="..." />
-        <img src="img/banner2.jpg" class="img-fluid" alt="..." />
-        <img src="img/banner2.jpg" class="img-fluid" alt="..." /> -->
+        <div class="row center-align d-flex justify-content-center text-center">
+          <div class="col p-0">
+            <img
+              src="img/banner2.jpg"
+              alt=""
+              class="img-responsive gallery-img"
+            />
+          </div>
+          <div class="col p-0">
+            <img
+              src="img/banner2.jpg"
+              alt=""
+              class="img-responsive gallery-img"
+            />
+          </div>
+          <div class="col p-0">
+            <img
+              src="img/banner2.jpg"
+              alt=""
+              class="img-responsive gallery-img"
+            />
+          </div>
+        </div>
+        <div class="row center-align d-flex justify-content-center text-center">
+          <div class="col p-0">
+            <img
+              src="img/banner2.jpg"
+              alt=""
+              class="img-responsive gallery-img img-fluid"
+            />
+          </div>
+        </div>
       </div>
     </div>
     <div class="footer">
