--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@
       </div>
       <div class="container text-center">
         <div class="row center-align d-flex justify-content-center text-center">
-          <div class="col p-0">
+          <div class="col-sm p-0">
             <img
               src="img/banner2.jpg"
               alt=""
               class="img-responsive gallery-img img-fluid"
             />
           </div>
-          <div class="col p-0">
+          <div class="col-sm p-0">
             <img
               src="img/banner2.jpg"
               alt=""
@@ -137,34 +137,25 @@
           </div>
         </div>
         <div class="row center-align d-flex justify-content-center text-center">
-          <div class="col p-0">
+          <div class="col-md p-0">
             <img
               src="img/banner2.jpg"
               alt=""
               class="img-responsive gallery-img"
             />
           </div>
-          <div class="col p-0">
+          <div class="col-md p-0">
             <img
               src="img/banner2.jpg"
               alt=""
               class="img-responsive gallery-img"
             />
           </div>
-          <div class="col p-0">
+          <div class="col-md p-0">
             <img
               src="img/banner2.jpg"
               alt=""
               class="img-responsive gallery-img"
-            />
-          </div>
-        </div>
-        <div class="row center-align d-flex justify-content-center text-center">
-          <div class="col p-0">
-            <img
-              src="img/banner2.jpg"
-              alt=""
-              class="img-responsive gallery-img img-fluid"
             />
           </div>
         </div>
@@ -173,7 +164,18 @@
     <div class="footer">
       <div class="container inner-footer">
         <hr />
-        <!--hr with something engineer themed-->
+        <div class="row m-3">
+          <div class="col d-grid">
+            <a href="">a</a><a href="">b</a><a href="">c</a><a href="">d</a>
+          </div>
+          <div class="col d-grid">
+            <a href="">e</a><a href="">f</a><a href="">g</a><a href="">h</a>
+          </div>
+          <div class="col d-grid">
+            <img src="img/rotor-logo.png" alt="" width="90%" />
+          </div>
+          <div class="col">col rrss</div>
+        </div>
       </div>
     </div>
     <script
