--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-      <div class="container text-center">
+      <div class="container-fluid text-center slogan-box">
         <div class="slogan">EAT UNTIL YOU'RE FULL(CRUM)</div>
 
         <p class="slogan-text">
@@ -119,7 +119,7 @@
           </div>
         </div>
       </div>
-      <div class="container text-center">
+      <div class="container-fluid text-center">
         <div class="row center-align d-flex justify-content-center text-center">
           <div class="col-sm p-0">
             <img
@@ -162,19 +162,51 @@
       </div>
     </div>
     <div class="footer">
-      <div class="container inner-footer">
-        <hr />
-        <div class="row m-3">
-          <div class="col d-grid">
-            <a href="">a</a><a href="">b</a><a href="">c</a><a href="">d</a>
+      <div class="container-fluid m-0 p-0 inner-footer">
+        <div class="row m-0">
+          <div class="col-sm d-grid text-center align-items-center mt-4 mb-4">
+            <a href="">Menu</a>
+            <a href="">Contact</a>
+            <a href="">Blog</a>
           </div>
-          <div class="col d-grid">
-            <a href="">e</a><a href="">f</a><a href="">g</a><a href="">h</a>
+          <div class="col-sm d-grid text-center align-items-center mt-4 mb-4">
+            <a href="#">GDPR Policy</a>
+            <a href="#">Terms and Conditions</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Buisness Contact</a>
           </div>
-          <div class="col d-grid">
-            <img src="img/rotor-logo.png" alt="" width="90%" />
+          <div class="col-lg d-grid align-items-center justify-content-center">
+            <img
+              src="img/rotor-logo-removebg-preview.png"
+              alt=""
+              width="40%"
+              class="mx-auto d-block m-4"
+            />
           </div>
-          <div class="col">col rrss</div>
+          <div
+            class="col-lg d-flex align-items-center justify-content-center mb-3"
+          >
+            <img
+              src="img/104461_twitter_icon.png"
+              alt=""
+              class="social-media-icon m-2"
+            />
+            <img
+              src="img/7639644_fb_social media_facebook_facebook logo_social network_icon.png"
+              alt=""
+              class="social-media-icon m-2"
+            />
+            <img
+              src="img/whatsapp-logo.png"
+              alt=""
+              class="social-media-icon m-2"
+            />
+            <img
+              src="img/5282544_camera_instagram_social media_social network_instagram logo_icon.png"
+              alt=""
+              class="social-media-icon m-2"
+            />
+          </div>
         </div>
       </div>
     </div>
