General outline for menu section complete

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -11,12 +11,153 @@
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
       crossorigin="anonymous"
     />
+
+    <link rel="stylesheet" href="../css/global.css" />
+    <link rel="stylesheet" href="../css/menu.css" />
+  </head>
+  <body>
+    <div class="header">
+      <nav class="navbar navbar-light header-navbar">
+        <div class="container">
+          <a class="nav-link header-link" href="pages/menu.html">MENU</a>
+
+          <a class="navbar-brand align-middle logo-text" href="../index.html"
+            >R
+            <img src="../img/spinning-cog.gif" alt="" class="spinning-cog" />
+            T
+            <img src="../img/spinning-cog.gif" alt="" class="spinning-cog" />
+            R</a
+          >
+          <a class="nav-link header-link" href="pages/contact.html">CONTACT</a>
+        </div>
+      </nav>
+    </div>
+    <div class="main">
+      <div class="container mt-5">
+        <div class="row row-cols-1 row-cols-md-2 g-4">
+          <div class="col text-center">
+            <div class="card mx-auto d-block">
+              <img
+                src="https://cdn2.iconfinder.com/data/icons/summer-outline-530/272/summer-vacation-juice-lemon-ice-drinks-glass-2-512.png"
+                class="card-img-top menu-item-image"
+                alt="..."
+              />
+              <div class="card-body">
+                <button type="button" class="btn btn-warning">Drinks</button>
+                <p class="card-text">
+                  This is a longer card with supporting text below as a natural
+                  lead-in to additional content. This content is a little bit
+                  longer.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col text-center">
+            <div class="card mx-auto d-block">
+              <img
+                src="https://cdn2.iconfinder.com/data/icons/food-drink-10/24/food-drink-34-512.png"
+                class="card-img-top menu-item-image"
+                alt="..."
+              />
+              <div class="card-body">
+                <button type="button" class="btn btn-warning">Starters</button>
+                <p class="card-text">
+                  This is a longer card with supporting text below as a natural
+                  lead-in to additional content. This content is a little bit
+                  longer.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col text-center">
+            <div class="card mx-auto d-block">
+              <img
+                src="https://cdn3.iconfinder.com/data/icons/restaurant-element-4/64/main-course-grill-steak-meat-512.png"
+                class="card-img-top menu-item-image"
+                alt="..."
+              />
+              <div class="card-body">
+                <button type="button" class="btn btn-warning">Main</button>
+                <p class="card-text">
+                  This is a longer card with supporting text below as a natural
+                  lead-in to additional content.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col text-center">
+            <div class="card mx-auto d-block">
+              <img
+                src="https://cdn4.iconfinder.com/data/icons/food-and-drink-dessert/32/CHEESE_CAKE-512.png"
+                class="card-img-top menu-item-image"
+                alt="..."
+              />
+              <div class="card-body">
+                <button type="button" class="btn btn-warning">Dessert</button>
+                <p class="card-text">
+                  This is a longer card with supporting text below as a natural
+                  lead-in to additional content. This content is a little bit
+                  longer.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="container-fluid m-0 p-0 inner-footer">
+        <div class="row m-0">
+          <div class="col-sm d-grid text-center align-items-center mt-4 mb-4">
+            <a href="">Menu</a>
+            <a href="">Contact</a>
+            <a href="">Blog</a>
+          </div>
+          <div class="col-sm d-grid text-center align-items-center mt-4 mb-4">
+            <a href="#">GDPR Policy</a>
+            <a href="#">Terms and Conditions</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Buisness Contact</a>
+          </div>
+          <div class="col-lg d-grid align-items-center justify-content-center">
+            <img
+              src="img/rotor-logo-removebg-preview.png"
+              alt=""
+              width="40%"
+              class="mx-auto d-block m-4"
+            />
+          </div>
+          <div
+            class="col-lg d-flex align-items-center justify-content-center mb-3"
+          >
+            <img
+              src="img/104461_twitter_icon.png"
+              alt=""
+              class="social-media-icon m-2"
+            />
+            <img
+              src="img/7639644_fb_social media_facebook_facebook logo_social network_icon.png"
+              alt=""
+              class="social-media-icon m-2"
+            />
+            <img
+              src="img/whatsapp-logo.png"
+              alt=""
+              class="social-media-icon m-2"
+            />
+            <img
+              src="img/5282544_camera_instagram_social media_social network_instagram logo_icon.png"
+              alt=""
+              class="social-media-icon m-2"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="../css/global.css" />
-  </head>
-  <body></body>
+  </body>
 </html>
