--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="img/banner1.jpg"
+              src="img/banner/banner1.jpg"
               class="d-block w-100 banner"
               alt="banner1"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="img/banner2.jpg"
+              src="img/banner/banner2.jpg"
               class="d-block w-100 banner"
               alt="banner2"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="img/banner3.jpg"
+              src="img/banner/banner3.jpg"
               class="d-block w-100 banner"
               alt="banner3"
             />
@@ -114,7 +114,7 @@
           </div>
           <div class="row">
             <div class="col">
-              <button type="button" class="btn btn-warning btn-md">Menu</button>
+              <button type="button" class="btn btn-warning btn-lg">Menu</button>
             </div>
           </div>
         </div>
@@ -123,14 +123,14 @@
         <div class="row center-align d-flex justify-content-center text-center">
           <div class="col-sm p-0">
             <img
-              src="img/banner2.jpg"
+              src="img/banner/banner1.jpg"
               alt=""
               class="img-responsive gallery-img img-fluid"
             />
           </div>
           <div class="col-sm p-0">
             <img
-              src="img/banner2.jpg"
+              src="img/banner/banner1.jpg"
               alt=""
               class="img-responsive gallery-img img-fluid"
             />
@@ -139,21 +139,21 @@
         <div class="row center-align d-flex justify-content-center text-center">
           <div class="col-md p-0">
             <img
-              src="img/banner2.jpg"
+              src="img/banner/banner1.jpg"
               alt=""
               class="img-responsive gallery-img"
             />
           </div>
           <div class="col-md p-0">
             <img
-              src="img/banner2.jpg"
+              src="img/banner/banner2.jpg"
               alt=""
               class="img-responsive gallery-img"
             />
           </div>
           <div class="col-md p-0">
             <img
-              src="img/banner2.jpg"
+              src="img/banner/banner3.jpg"
               alt=""
               class="img-responsive gallery-img"
             />
