Footer perfected, menu completed, contact completed

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container">
           <a class="nav-link header-link" href="pages/menu.html">MENU</a>
 
-          <a class="navbar-brand align-middle logo-text" href="index.html"
+          <a class="navbar-brand align-middle logo-text" href="#"
             >R
             <img src="img/spinning-cog.gif" alt="" class="spinning-cog" />
             T
@@ -165,8 +165,8 @@
       <div class="container-fluid m-0 p-0 inner-footer">
         <div class="row m-0">
           <div class="col-sm d-grid text-center align-items-center mt-4 mb-4">
-            <a href="">Menu</a>
-            <a href="">Contact</a>
+            <a href="pages/menu.html">Menu</a>
+            <a href="pages/contact.html">Contact</a>
             <a href="">Blog</a>
           </div>
           <div class="col-sm d-grid text-center align-items-center mt-4 mb-4">
@@ -176,33 +176,38 @@
             <a href="#">Buisness Contact</a>
           </div>
           <div class="col-lg d-grid align-items-center justify-content-center">
-            <img
-              src="img/rotor-logo-removebg-preview.png"
-              alt=""
-              width="40%"
-              class="mx-auto d-block m-4"
-            />
+            <a href="#">
+              <img
+                src="img/rotor-logo-removebg-preview.png"
+                alt=""
+                width="40%"
+                class="mx-auto d-block m-4"
+              />
+            </a>
+          </div>
+          <div class="col-sm align-items-center d-flex justify-content-center">
+            © 2022 ROTOR Ltd. - All rights reserved
           </div>
           <div
-            class="col-lg d-flex align-items-center justify-content-center mb-3"
+            class="col-lg d-flex align-items-center justify-content-center mb-3 mt-3"
           >
             <img
-              src="img/104461_twitter_icon.png"
+              src="img/social-media-icons/fb-icon.png"
               alt=""
               class="social-media-icon m-2"
             />
             <img
-              src="img/7639644_fb_social media_facebook_facebook logo_social network_icon.png"
+              src="img/social-media-icons/ig-icon.png"
               alt=""
               class="social-media-icon m-2"
             />
             <img
-              src="img/whatsapp-logo.png"
+              src="img/social-media-icons/tt-icon.png"
               alt=""
               class="social-media-icon m-2"
             />
             <img
-              src="img/5282544_camera_instagram_social media_social network_instagram logo_icon.png"
+              src="img/social-media-icons/ws-icon.png"
               alt=""
               class="social-media-icon m-2"
             />
