--- a/pages/contact.html
+++ b/pages/contact.html
@@ -13,8 +13,122 @@
     />
 
     <link rel="stylesheet" href="../css/global.css" />
+    <link rel="stylesheet" href="../css/contact.css" />
   </head>
   <body>
+    <div class="header">
+      <nav class="navbar navbar-light header-navbar">
+        <div class="container">
+          <a class="nav-link header-link" href="menu.html">MENU</a>
+
+          <a class="navbar-brand align-middle logo-text" href="../index.html"
+            >R
+            <img src="../img/spinning-cog.gif" alt="" class="spinning-cog" />
+            T
+            <img src="../img/spinning-cog.gif" alt="" class="spinning-cog" />
+            R</a
+          >
+
+          <a class="nav-link header-link" href="#">CONTACT</a>
+        </div>
+      </nav>
+    </div>
+    <div class="main">
+      <div class="container-fluid m-0 p-0 d-grid">
+        <div class="row p-0 m-0">
+          <div class="col p-0 m-0 d-flex justify-content-center text-center">
+            <h1 class="contact-title">CONTACT</h1>
+            <img src="../img/contact.jpg" class="contact-img p-0" />
+          </div>
+        </div>
+        <div class="row p-0 m-0 d-grid justify-content-center">
+          <div class="col mt-5">
+            <div class="contact-reservaion-text text-center">
+              You can make a reservation
+              <a href="#" class="contact-link">here</a> or call us
+              <a href="#" class="contact-link">here</a>.
+            </div>
+          </div>
+          <div class="row m-0 p-0 d-flex mb-4">
+            <div
+              class="col d-grid whatsapp-contact-box justify-content-center text-center"
+            >
+              <div class="mt-5">Need help?</div>
+              <div>
+                Send us a <a href="#" class="contact-link">WhatsApp!</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row m-5 justify-content-center text-center">
+          <div class="col">
+            <div>Opening hours</div>
+            <div class="col">Monday-Saturday 12:00-23:30</div>
+          </div>
+          <div class="col">
+            <div>Location</div>
+            <a href="#">
+              <div class="col">Jacobs Street 72nd</div>
+              <div>New Malia</div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="container-fluid m-0 p-0 inner-footer">
+        <div class="row m-0 footer-container">
+          <div class="col-sm d-grid text-center align-items-center mt-4 mb-4">
+            <a href="menu.html">Menu</a>
+            <a href="contact.html">Contact</a>
+            <a href="">Blog</a>
+          </div>
+          <div class="col-sm d-grid text-center align-items-center mt-4 mb-4">
+            <a href="#">GDPR Policy</a>
+            <a href="#">Terms and Conditions</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Buisness Contact</a>
+          </div>
+          <div class="col-lg d-grid align-items-center justify-content-center">
+            <a href="../index.html">
+              <img
+                src="../img/rotor-logo-removebg-preview.png"
+                alt=""
+                width="40%"
+                class="mx-auto d-block m-4"
+              />
+            </a>
+          </div>
+          <div class="col-sm align-items-center d-flex justify-content-center">
+            © 2022 ROTOR Ltd. - All rights reserved
+          </div>
+          <div
+            class="col-lg d-flex align-items-center justify-content-center mb-3 mt-3"
+          >
+            <img
+              src="../img/social-media-icons/fb-icon.png"
+              alt=""
+              class="social-media-icon m-2"
+            />
+            <img
+              src="../img/social-media-icons/ig-icon.png"
+              alt=""
+              class="social-media-icon m-2"
+            />
+            <img
+              src="../img/social-media-icons/tt-icon.png"
+              alt=""
+              class="social-media-icon m-2"
+            />
+            <img
+              src="../img/social-media-icons/ws-icon.png"
+              alt=""
+              class="social-media-icon m-2"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
