--- a/pages/menu.html
+++ b/pages/menu.html
@@ -19,7 +19,7 @@
     <div class="header">
       <nav class="navbar navbar-light header-navbar">
         <div class="container">
-          <a class="nav-link header-link" href="pages/menu.html">MENU</a>
+          <a class="nav-link header-link" href="#">MENU</a>
 
           <a class="navbar-brand align-middle logo-text" href="../index.html"
             >R
@@ -28,7 +28,7 @@
             <img src="../img/spinning-cog.gif" alt="" class="spinning-cog" />
             R</a
           >
-          <a class="nav-link header-link" href="pages/contact.html">CONTACT</a>
+          <a class="nav-link header-link" href="contact.html">CONTACT</a>
         </div>
       </nav>
     </div>
@@ -43,7 +43,9 @@
                 alt="..."
               />
               <div class="card-body">
-                <button type="button" class="btn btn-warning">Drinks</button>
+                <a href="#">
+                  <button type="button" class="btn btn-warning">Drinks</button>
+                </a>
                 <p class="card-text">
                   This is a longer card with supporting text below as a natural
                   lead-in to additional content. This content is a little bit
@@ -60,7 +62,11 @@
                 alt="..."
               />
               <div class="card-body">
-                <button type="button" class="btn btn-warning">Starters</button>
+                <a href="#">
+                  <button type="button" class="btn btn-warning">
+                    Starters
+                  </button>
+                </a>
                 <p class="card-text">
                   This is a longer card with supporting text below as a natural
                   lead-in to additional content. This content is a little bit
@@ -77,7 +83,9 @@
                 alt="..."
               />
               <div class="card-body">
-                <button type="button" class="btn btn-warning">Main</button>
+                <a href="#">
+                  <button type="button" class="btn btn-warning">Main</button>
+                </a>
                 <p class="card-text">
                   This is a longer card with supporting text below as a natural
                   lead-in to additional content.
@@ -93,7 +101,9 @@
                 alt="..."
               />
               <div class="card-body">
-                <button type="button" class="btn btn-warning">Dessert</button>
+                <a href="#">
+                  <button type="button" class="btn btn-warning">Dessert</button>
+                </a>
                 <p class="card-text">
                   This is a longer card with supporting text below as a natural
                   lead-in to additional content. This content is a little bit
@@ -107,10 +117,10 @@
     </div>
     <div class="footer">
       <div class="container-fluid m-0 p-0 inner-footer">
-        <div class="row m-0">
+        <div class="row m-0 footer-container">
           <div class="col-sm d-grid text-center align-items-center mt-4 mb-4">
-            <a href="">Menu</a>
-            <a href="">Contact</a>
+            <a href="menu.html">Menu</a>
+            <a href="contact.html">Contact</a>
             <a href="">Blog</a>
           </div>
           <div class="col-sm d-grid text-center align-items-center mt-4 mb-4">
@@ -120,33 +130,38 @@
             <a href="#">Buisness Contact</a>
           </div>
           <div class="col-lg d-grid align-items-center justify-content-center">
-            <img
-              src="img/rotor-logo-removebg-preview.png"
-              alt=""
-              width="40%"
-              class="mx-auto d-block m-4"
-            />
+            <a href="../index.html">
+              <img
+                src="../img/rotor-logo-removebg-preview.png"
+                alt=""
+                width="40%"
+                class="mx-auto d-block m-4"
+              />
+            </a>
+          </div>
+          <div class="col-sm align-items-center d-flex justify-content-center">
+            © 2022 ROTOR Ltd. - All rights reserved
           </div>
           <div
-            class="col-lg d-flex align-items-center justify-content-center mb-3"
+            class="col-lg d-flex align-items-center justify-content-center mb-3 mt-3"
           >
             <img
-              src="img/104461_twitter_icon.png"
+              src="../img/social-media-icons/fb-icon.png"
               alt=""
               class="social-media-icon m-2"
             />
             <img
-              src="img/7639644_fb_social media_facebook_facebook logo_social network_icon.png"
+              src="../img/social-media-icons/ig-icon.png"
               alt=""
               class="social-media-icon m-2"
             />
             <img
-              src="img/whatsapp-logo.png"
+              src="../img/social-media-icons/tt-icon.png"
               alt=""
               class="social-media-icon m-2"
             />
             <img
-              src="img/5282544_camera_instagram_social media_social network_instagram logo_icon.png"
+              src="../img/social-media-icons/ws-icon.png"
               alt=""
               class="social-media-icon m-2"
             />
