gallery images set

--- a/index.html
+++ b/index.html
@@ -114,7 +114,11 @@
           </div>
           <div class="row">
             <div class="col">
-              <button type="button" class="btn btn-warning btn-lg">Menu</button>
+              <a href="pages/menu.html">
+                <button type="button" class="btn btn-warning btn-lg">
+                  Menu
+                </button>
+              </a>
             </div>
           </div>
         </div>
@@ -123,14 +127,14 @@
         <div class="row center-align d-flex justify-content-center text-center">
           <div class="col-sm p-0">
             <img
-              src="img/banner/banner1.jpg"
+              src="img/steampunk-burger.jpg"
               alt=""
               class="img-responsive gallery-img img-fluid"
             />
           </div>
           <div class="col-sm p-0">
             <img
-              src="img/banner/banner1.jpg"
+              src="img/steampunk-desert.jpg"
               alt=""
               class="img-responsive gallery-img img-fluid"
             />
@@ -139,21 +143,21 @@
         <div class="row center-align d-flex justify-content-center text-center">
           <div class="col-md p-0">
             <img
-              src="img/banner/banner1.jpg"
+              src="img/steampunk-pizza.jpg"
               alt=""
               class="img-responsive gallery-img"
             />
           </div>
           <div class="col-md p-0">
             <img
-              src="img/banner/banner2.jpg"
+              src="img/steampunk-accesory.jpg"
               alt=""
               class="img-responsive gallery-img"
             />
           </div>
           <div class="col-md p-0">
             <img
-              src="img/banner/banner3.jpg"
+              src="img/steampunk-drink.jpg"
               alt=""
               class="img-responsive gallery-img"
             />
