--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
     <link rel="stylesheet" href="css/global.css" />
     <link rel="stylesheet" href="css/index.css" />
-    <title>Document</title>
+    <link rel="icon" type="image/png" href="img/favicon.png" />
+    <title>Home</title>
   </head>
   <body>
     <div class="header">
