fixed some text, fixed footer in contacts

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <p class="slogan-text">
           At ROTOR we prioritize 'functional eating', a term coined by our
-          visionary CEO and head chef, Ral Zarek.
+          visionary CEO and head chef, Thomas Johnson Jefferey the 3rd.
         </p>
         <p>
           Only the finest, dinest, refined-est cuisine for our guests, the ethos
@@ -95,9 +95,9 @@
           Lorem ipsum dolor, sit amet consectetur adipisicing.
         </p>
         <p>
-          (Write something here about how we wouldn't have it any other way bla
-          bla bla Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          Amet, quod? )
+          (Write something here about how we wouldn't have it any other way
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, ex
+          modi! Aliquid aliquam architecto atque officiis sequi enim aut quia.
         </p>
 
         <img src="img/signature.png" alt="" height="25%" width="25%" />
