--- a/pages/menu.html
+++ b/pages/menu.html
@@ -47,11 +47,7 @@
                 <a href="#">
                   <button type="button" class="btn btn-warning">Drinks</button>
                 </a>
-                <p class="card-text">
-                  This is a longer card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
-                </p>
+                <p class="card-text">Did somebody say screwdriver?</p>
               </div>
             </div>
           </div>
@@ -69,9 +65,7 @@
                   </button>
                 </a>
                 <p class="card-text">
-                  This is a longer card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
+                  Plenty of delicious appetizers to share!
                 </p>
               </div>
             </div>
@@ -88,8 +82,7 @@
                   <button type="button" class="btn btn-warning">Main</button>
                 </a>
                 <p class="card-text">
-                  This is a longer card with supporting text below as a natural
-                  lead-in to additional content.
+                  Our main courses are a marvel, take a gander!
                 </p>
               </div>
             </div>
@@ -105,11 +98,7 @@
                 <a href="#">
                   <button type="button" class="btn btn-warning">Dessert</button>
                 </a>
-                <p class="card-text">
-                  This is a longer card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
-                </p>
+                <p class="card-text">Not full? We can fix that!</p>
               </div>
             </div>
           </div>
