--- a/pages/contact.html
+++ b/pages/contact.html
@@ -38,7 +38,7 @@
       <div class="container-fluid m-0 p-0 d-grid">
         <div class="row p-0 m-0">
           <div class="col p-0 m-0 d-flex justify-content-center text-center">
-            <h1 class="contact-title">CONTACT</h1>
+            <h1 class="contact-title">CONTACT US</h1>
             <img src="../img/contact.jpg" class="contact-img p-0" />
           </div>
         </div>
