added nice buttons, last to do is add gmaps and fonts

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -45,7 +45,10 @@
               />
               <div class="card-body">
                 <a href="#">
-                  <button type="button" class="btn btn-warning">Drinks</button>
+                  <button class="btn-23 menu-btn">
+                    <span class="text">Drinks</span>
+                    <span class="marquee" aria-hidden>Drinks</span>
+                  </button>
                 </a>
                 <p class="card-text">Did somebody say screwdriver?</p>
               </div>
@@ -60,8 +63,9 @@
               />
               <div class="card-body">
                 <a href="#">
-                  <button type="button" class="btn btn-warning">
-                    Starters
+                  <button class="btn-23 menu-btn">
+                    <span class="text">Starters</span>
+                    <span class="marquee" aria-hidden>Starters</span>
                   </button>
                 </a>
                 <p class="card-text">
@@ -79,7 +83,10 @@
               />
               <div class="card-body">
                 <a href="#">
-                  <button type="button" class="btn btn-warning">Main</button>
+                  <button class="btn-23 menu-btn">
+                    <span class="text">Main</span>
+                    <span class="marquee" aria-hidden>Main</span>
+                  </button>
                 </a>
                 <p class="card-text">
                   Our main courses are a marvel, take a gander!
@@ -96,7 +103,10 @@
               />
               <div class="card-body">
                 <a href="#">
-                  <button type="button" class="btn btn-warning">Dessert</button>
+                  <button class="btn-23 menu-btn">
+                    <span class="text">Dessert</span>
+                    <span class="marquee" aria-hidden>Dessert</span>
+                  </button>
                 </a>
                 <p class="card-text">Not full? We can fix that!</p>
               </div>
