--- a/index.html
+++ b/index.html
@@ -116,8 +116,9 @@
           <div class="row">
             <div class="col">
               <a href="pages/menu.html">
-                <button type="button" class="btn btn-warning btn-lg">
-                  Menu
+                <button class="btn-23">
+                  <span class="text">Menu</span>
+                  <span class="marquee" aria-hidden>Menu</span>
                 </button>
               </a>
             </div>
