--- a/index.html
+++ b/index.html
@@ -113,13 +113,10 @@
               <p class="text-center">CHECK OUT OUR DISHES</p>
             </div>
           </div>
-          <div class="row">
+          <div class="row p-0 m-0">
             <div class="col">
               <a href="pages/menu.html">
-                <button class="btn-23">
-                  <span class="text">Menu</span>
-                  <span class="marquee" aria-hidden>Menu</span>
-                </button>
+                <button type="button" class="btn btn-warning btn-">Menu</button>
               </a>
             </div>
           </div>
@@ -181,7 +178,9 @@
             <a href="#">Privacy Policy</a>
             <a href="#">Buisness Contact</a>
           </div>
-          <div class="col-lg d-grid align-items-center justify-content-center">
+          <div
+            class="col-lg d-grid align-items-center justify-content-center p-0"
+          >
             <a href="#">
               <img
                 src="img/rotor-logo-removebg-preview.png"
@@ -191,11 +190,13 @@
               />
             </a>
           </div>
-          <div class="col-sm align-items-center d-flex justify-content-center">
+          <div
+            class="col-sm align-items-center d-flex justify-content-center p-0"
+          >
             © 2022 ROTOR Ltd. - All rights reserved
           </div>
           <div
-            class="col-lg d-flex align-items-center justify-content-center mb-3 mt-3"
+            class="col-lg d-flex align-items-center justify-content-center mb-3 mt-3 p-0"
           >
             <img
               src="img/social-media-icons/fb-icon.png"
