index.html no scroll bar anymore

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-      <div class="container-fluid text-center slogan-box">
+      <div class="container-fluid text-center slogan-box p-0">
         <div class="slogan">EAT UNTIL YOU'RE FULL(CRUM)</div>
 
         <p class="slogan-text">
