--- a/pages/menu.html
+++ b/pages/menu.html
@@ -45,9 +45,8 @@
               />
               <div class="card-body">
                 <a href="#">
-                  <button class="btn-23 menu-btn">
-                    <span class="text">Drinks</span>
-                    <span class="marquee" aria-hidden>Drinks</span>
+                  <button type="button" class="btn btn-warning btn-sm">
+                    Drinks
                   </button>
                 </a>
                 <p class="card-text">Did somebody say screwdriver?</p>
@@ -63,9 +62,8 @@
               />
               <div class="card-body">
                 <a href="#">
-                  <button class="btn-23 menu-btn">
-                    <span class="text">Starters</span>
-                    <span class="marquee" aria-hidden>Starters</span>
+                  <button type="button" class="btn btn-warning btn-sm">
+                    Starters
                   </button>
                 </a>
                 <p class="card-text">
@@ -83,9 +81,8 @@
               />
               <div class="card-body">
                 <a href="#">
-                  <button class="btn-23 menu-btn">
-                    <span class="text">Main</span>
-                    <span class="marquee" aria-hidden>Main</span>
+                  <button type="button" class="btn btn-warning btn-sm">
+                    Main
                   </button>
                 </a>
                 <p class="card-text">
@@ -103,9 +100,8 @@
               />
               <div class="card-body">
                 <a href="#">
-                  <button class="btn-23 menu-btn">
-                    <span class="text">Dessert</span>
-                    <span class="marquee" aria-hidden>Dessert</span>
+                  <button type="button" class="btn btn-warning btn-sm">
+                    Dessert
                   </button>
                 </a>
                 <p class="card-text">Not full? We can fix that!</p>
