--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
           <div class="row p-0 m-0">
             <div class="col">
               <a href="pages/menu.html">
-                <button type="button" class="btn btn-warning btn-">Menu</button>
+                <button type="button" class="btn btn-warning btn-lg">
+                  Menu
+                </button>
               </a>
             </div>
           </div>
