--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <div class="header">
       <nav class="navbar navbar-light header-navbar">
-        <div class="container">
+        <div class="container-fluid">
           <a class="nav-link header-link" href="pages/menu.html">MENU</a>
 
           <a class="navbar-brand align-middle logo-text" href="#"
@@ -44,21 +44,21 @@
           <div class="carousel-item active">
             <img
               src="img/banner/banner1.jpg"
-              class="d-block w-100 banner"
+              class="d-block w-75 banner"
               alt="banner1"
             />
           </div>
           <div class="carousel-item">
             <img
               src="img/banner/banner2.jpg"
-              class="d-block w-100 banner"
+              class="d-block w-75 banner"
               alt="banner2"
             />
           </div>
           <div class="carousel-item">
             <img
               src="img/banner/banner3.jpg"
-              class="d-block w-100 banner"
+              class="d-block w-75 banner"
               alt="banner3"
             />
           </div>
