--- a/pages/menu.html
+++ b/pages/menu.html
@@ -113,10 +113,10 @@
     </div>
     <div class="footer">
       <div class="container-fluid m-0 p-0 inner-footer">
-        <div class="row m-0 footer-container">
+        <div class="row m-0">
           <div class="col-sm d-grid text-center align-items-center mt-4 mb-4">
-            <a href="menu.html">Menu</a>
-            <a href="contact.html">Contact</a>
+            <a href="pages/menu.html">Menu</a>
+            <a href="pages/contact.html">Contact</a>
             <a href="">Blog</a>
           </div>
           <div class="col-sm d-grid text-center align-items-center mt-4 mb-4">
@@ -125,8 +125,10 @@
             <a href="#">Privacy Policy</a>
             <a href="#">Buisness Contact</a>
           </div>
-          <div class="col-lg d-grid align-items-center justify-content-center">
-            <a href="../index.html">
+          <div
+            class="col-lg d-grid align-items-center justify-content-center p-0"
+          >
+            <a href="#">
               <img
                 src="../img/rotor-logo-removebg-preview.png"
                 alt=""
@@ -135,11 +137,13 @@
               />
             </a>
           </div>
-          <div class="col-sm align-items-center d-flex justify-content-center">
+          <div
+            class="col-sm align-items-center d-flex justify-content-center p-0"
+          >
             © 2022 ROTOR Ltd. - All rights reserved
           </div>
           <div
-            class="col-lg d-flex align-items-center justify-content-center mb-3 mt-3"
+            class="col-lg d-flex align-items-center justify-content-center mb-3 mt-3 p-0"
           >
             <img
               src="../img/social-media-icons/fb-icon.png"
