index.html is FULLY responsive

--- a/index.html
+++ b/index.html
@@ -193,33 +193,39 @@
             </a>
           </div>
           <div
-            class="col-sm align-items-center d-flex justify-content-center p-0"
+            class="col-md align-items-center d-flex justify-content-center p-0"
           >
             © 2022 ROTOR Ltd. - All rights reserved
           </div>
-          <div
-            class="col-lg d-flex align-items-center justify-content-center mb-3 mt-3 p-0"
-          >
-            <img
-              src="img/social-media-icons/fb-icon.png"
-              alt=""
-              class="social-media-icon m-2"
-            />
-            <img
-              src="img/social-media-icons/ig-icon.png"
-              alt=""
-              class="social-media-icon m-2"
-            />
-            <img
-              src="img/social-media-icons/tt-icon.png"
-              alt=""
-              class="social-media-icon m-2"
-            />
-            <img
-              src="img/social-media-icons/ws-icon.png"
-              alt=""
-              class="social-media-icon m-2"
-            />
+          <div class="row justify-content-center">
+            <div class="col-2 mb-3 mt-3 p-0 text-center">
+              <img
+                src="img/social-media-icons/fb-icon.png"
+                alt=""
+                class="social-media-icon m-2"
+              />
+            </div>
+            <div class="col-2 mb-3 mt-3 p-0 text-center">
+              <img
+                src="img/social-media-icons/ig-icon.png"
+                alt=""
+                class="social-media-icon m-2"
+              />
+            </div>
+            <div class="col-2 mb-3 mt-3 p-0 text-center">
+              <img
+                src="img/social-media-icons/tt-icon.png"
+                alt=""
+                class="social-media-icon m-2"
+              />
+            </div>
+            <div class="col-2 mb-3 mt-3 p-0 text-center">
+              <img
+                src="img/social-media-icons/ws-icon.png"
+                alt=""
+                class="social-media-icon m-2"
+              />
+            </div>
           </div>
         </div>
       </div>
