Responsiveness fixed in menu.html + contact.html

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             </a>
           </div>
           <div
-            class="col-md align-items-center d-flex justify-content-center p-0"
+            class="col-md align-items-center d-flex justify-content-center text-center p-0"
           >
             © 2022 ROTOR Ltd. - All rights reserved
           </div>
