--- a/pages/menu.html
+++ b/pages/menu.html
@@ -19,7 +19,7 @@
   <body>
     <div class="header">
       <nav class="navbar navbar-light header-navbar">
-        <div class="container">
+        <div class="container-fluid">
           <a class="nav-link header-link" href="#">MENU</a>
 
           <a class="navbar-brand align-middle logo-text" href="../index.html"
@@ -29,6 +29,7 @@
             <img src="../img/spinning-cog.gif" alt="" class="spinning-cog" />
             R</a
           >
+
           <a class="nav-link header-link" href="contact.html">CONTACT</a>
         </div>
       </nav>
@@ -43,7 +44,9 @@
                 class="card-img-top menu-item-image"
                 alt="..."
               />
-              <div class="card-body">
+              <div
+                class="card-body text-center align-items-center justify-content-center"
+              >
                 <a href="#">
                   <button type="button" class="btn btn-warning btn-sm">
                     Drinks
@@ -60,7 +63,9 @@
                 class="card-img-top menu-item-image"
                 alt="..."
               />
-              <div class="card-body">
+              <div
+                class="card-body text-center align-items-center justify-content-center"
+              >
                 <a href="#">
                   <button type="button" class="btn btn-warning btn-sm">
                     Starters
@@ -79,7 +84,9 @@
                 class="card-img-top menu-item-image"
                 alt="..."
               />
-              <div class="card-body">
+              <div
+                class="card-body text-center align-items-center justify-content-center"
+              >
                 <a href="#">
                   <button type="button" class="btn btn-warning btn-sm">
                     Main
@@ -98,7 +105,9 @@
                 class="card-img-top menu-item-image"
                 alt="..."
               />
-              <div class="card-body">
+              <div
+                class="card-body text-center align-items-center justify-content-center"
+              >
                 <a href="#">
                   <button type="button" class="btn btn-warning btn-sm">
                     Dessert
@@ -138,7 +147,7 @@
             </a>
           </div>
           <div
-            class="col-sm align-items-center d-flex justify-content-center p-0"
+            class="col-sm align-items-center d-flex justify-content-center text-center p-0"
           >
             © 2022 ROTOR Ltd. - All rights reserved
           </div>
