--- a/pages/contact.html
+++ b/pages/contact.html
@@ -19,7 +19,7 @@
   <body>
     <div class="header">
       <nav class="navbar navbar-light header-navbar">
-        <div class="container">
+        <div class="container-fluid">
           <a class="nav-link header-link" href="menu.html">MENU</a>
 
           <a class="navbar-brand align-middle logo-text" href="../index.html"
@@ -78,10 +78,10 @@
     </div>
     <div class="footer">
       <div class="container-fluid m-0 p-0 inner-footer">
-        <div class="row m-0 footer-container">
+        <div class="row m-0">
           <div class="col-sm d-grid text-center align-items-center mt-4 mb-4">
-            <a href="menu.html">Menu</a>
-            <a href="contact.html">Contact</a>
+            <a href="pages/menu.html">Menu</a>
+            <a href="pages/contact.html">Contact</a>
             <a href="">Blog</a>
           </div>
           <div class="col-sm d-grid text-center align-items-center mt-4 mb-4">
@@ -90,8 +90,10 @@
             <a href="#">Privacy Policy</a>
             <a href="#">Buisness Contact</a>
           </div>
-          <div class="col-lg d-grid align-items-center justify-content-center">
-            <a href="../index.html">
+          <div
+            class="col-lg d-grid align-items-center justify-content-center p-0"
+          >
+            <a href="#">
               <img
                 src="../img/rotor-logo-removebg-preview.png"
                 alt=""
@@ -100,11 +102,13 @@
               />
             </a>
           </div>
-          <div class="col-sm align-items-center d-flex justify-content-center">
+          <div
+            class="col-sm align-items-center d-flex justify-content-center text-center p-0"
+          >
             © 2022 ROTOR Ltd. - All rights reserved
           </div>
           <div
-            class="col-lg d-flex align-items-center justify-content-center mb-3 mt-3"
+            class="col-lg d-flex align-items-center justify-content-center mb-3 mt-3 p-0"
           >
             <img
               src="../img/social-media-icons/fb-icon.png"
