--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
           <div class="carousel-item active">
             <img
               src="img/banner/banner1.jpg"
-              class="d-block w-75 banner"
+              class="d-block banner"
               alt="banner1"
             />
           </div>
           <div class="carousel-item">
             <img
               src="img/banner/banner2.jpg"
-              class="d-block w-75 banner"
+              class="d-block banner"
               alt="banner2"
             />
           </div>
           <div class="carousel-item">
             <img
               src="img/banner/banner3.jpg"
-              class="d-block w-75 banner"
+              class="d-block banner"
               alt="banner3"
             />
           </div>
